--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,12 @@
    	font-family: 'PT Sans', sans-serif;
    }
 
+   section {
+   		width: 100%;
+		min-height: 100%;
+
+   }
+
 /*	===============================================
 	NAV
 	=============================================== */	
@@ -62,9 +68,9 @@
 	Header
 	================================================*/
 	header {	
-		width: 100%;
-		height: 100vh;
-		background-color: #f4f2f3;
+			width: 100%;
+			height: 100vh;
+			background-color: #f4f2f3;
 	}
 
 	#introtext {
@@ -115,14 +121,7 @@
 		margin-top: 30%;
 	}
 
-	#pourAnimation {
-		position: absolute;
-		margin-top: 43%;
-		padding-left: 54%;
-		stroke-dasharray: 1000;
-		stroke-dashoffset: 1000;
-		animation: dash 5s linear forwards;
-	}
+
 
 	@keyframes dash {
 		to {
@@ -181,9 +180,9 @@
    ingredients:
    ========================================================================== */
    #ingredients{
-   	width: 100%;
-   	height: 100vh;
+	
    	background-color: #EE8E43;
+   	
 
    }
 
@@ -208,7 +207,7 @@
    	display: block;
    	margin-top: 1em;
    	line-height: 1.5em;
-   	width: 40%;
+   	width: 30%;
    }
 
 label, input {
@@ -283,32 +282,63 @@ label {
   color: #aaa;
 }
 
+#circleWrapper {
+	width: 30%;
+    align-self: flex-end;
+}
+
+#circle {
+    width: 200px;
+    height: 200px;
+    border: 4px solid white;
+    border-radius: 50%;
+    display: block;
+    text-align: center;
+    margin-bottom: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ 
+}
+	
+
+#circle p {
+	text-align: center;
+	font-family: 'Yeseva One';
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    padding: 5%;
+}
+
 
 
    #ingredients-image {
-   	width:50%;
-   	align-self: flex-start;
+   	width:30%;
+   	align-self: flex-end;
 
    }
 
-   #ingredients-image #cup4 {
+   #ingredients-image #cup41 {
    	display: block;
-   	width:30%;
+   	width:60%;
    	height: auto;
    	transform: scaleX(-1);
-   	margin-bottom: 1rem;
-
+   	margin-bottom: .5rem;
    }
+
+   #ingredients-image #cup42 {
+   	display: block;
+   	width:60%;
+   	height: auto;
+   }
+
    
 /* ==========================================================================
    directions:
    ========================================================================== */
-   #directions {
-   	width: 100%;
-   	height: 100vh;
-   	
-   }
-
+#directions {
+	
+}
    #directions h2 {
 
    	text-transform: uppercase;
@@ -329,26 +359,31 @@ label {
 	width: 400%;
 }
 
+#button-wrapper {
+	text-align: center;
+}
 
 button {
-	background-color: #3C4A53;
-	border: none;
-	font-size: .9rem;
-	color: white;
-	text-transform: uppercase;
-	font-weight: bold;
-	padding: 8px 15px;
-	margin: 0 10px;
+    border: none;
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    font-size: 1rem;
+    color: white;
+    font-weight: bold;
+    margin: 10px 20px;
 }
+
+
+
 /* ====================================================
 	Adjustments
 	==================================================== */
 
 	#adjustments {
+		
 		background-color: rgba(255, 204, 255, 0.47);
 		opacity: 50%;
-		width: 100%;
-		height: 100vh;
 	}
 
 	#adjustments h2 {
@@ -416,8 +451,7 @@ button {
 
 	#teaLeafFortunes {
 		background-color: #f4f2f3;
-		width: 100%;
-		height: 100vh;
+		
 	}
 
 	#teaLeafFortunes h2{
